2003-05-14  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex.c (usage): Fixed a stupid and incorrect comment about the
	"-a" parameter.

2003-05-13  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex.c (own_strtok): Fixed for nestle usage.

	* macros.c (get_macro): Added.
	(modify_macro): Optimized (doesn't make search anymore).

2003-03-03  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex 0.4.2 released.

	* make/: Added a sample site to use htmlex with Makefile, also,
	added make.exe in DOS distribution (Andrew Vovk ideas).

2003-03-02  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex.c (main): Added "-E" option to change the default .html
	extension (Andrew Vovk idea).

	* cambios.txt, changes.txt: Removed. New "ChangeLog" file with
	english comments. Also, I removed old comments about Perl version
	of htmlex.

2003-02-23  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex.c (main): Reestructured arguments processing. Now is not
	necessary use "-o" y "-a" before "-c" (Andrew Vovk idea).

2003-02-21  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex.c (process_file): Fixed some strange behavior of
	functional macros.

2003-02-17  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex.c (main): Fixed dependencies generation.

	* htmlex.c (out_deps): Fixed a little bug "depstream".

	* htmlex.c, tags.c: Added "kill_comments" variable and an optional
	-k parameter to active this old behavior (thanks to Zaripov
	Michail for report that comments are necessary in some cases like
	javascripts).

2003-02-16  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex.c: Added "can_dep" to make less dependencies.

2003-02-10  David A. Capello  <dacap@users.sourceforge.net>

	* htmlex-filter.pl: Added this script to optimize htmlex output.

	* htmlex.c, macros.c: Functional macros works perfectly.

2003-02-09  David A. Capello  <dacap@users.sourceforge.net>
